--- a/plug-ins/TPARunnerPanel/tr-TR.po
+++ b/plug-ins/TPARunnerPanel/tr-TR.po
@@ -173,4 +173,4 @@ msgid "WaitingForConnection..."
 msgstr "Bağlantı bekleniyor..."
 
 msgid "Working..."
-msgstr "Çalışıypr..."
+msgstr "Çalışıyor..."
